jam-time-frontend/src/app/shared/layout/layout.component.scss
.navbar-container {
  display: flex;
  flex-direction: column;
  height: 100%;
}


mat-progress-bar {
  position: absolute;
  top: 0;
  left: 0;
}

mat-sidenav-container {
  flex: 1;
}

mat-sidenav {
  box-shadow: 6px 0 10px -5px rgba(0, 0, 0, 0.3);
  border-radius: 0;
  width: 240px;
}

.mobile-view mat-sidenav {
  margin-top: 64px;
}

mat-sidenav.is-collapsed {
  width: 80px;
}

app-header {
  z-index: 4;
}

